# jira_api_client

./: .gitignore  .pre-commit-config.yaml  LICENSE  create-env.sh  pyproject.toml  readme.md  requirements.txt  setup.cfg
docs/: project_structure.puml
src/: jira_client.py  main.py
src/examples/: create_ticket.py  get_tickets.py  upload_attachment.py
src/jira_api_client/: jira_client.py
src/jira_api_client/models/: attachment.py  base.py  issue.py  search.py  ticket_create.py
src/models/: attachment.py  base.py  issue.py  search.py
