[project]
name = "jira_api_client"
version = "0.1.0"
description = "A Python client for Jira REST API"
readme = "readme.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
keywords = ["jira", "api", "client", "automation"]
authors = [
  { name = "Satoshi Inoue", email = "satoshi.o4o4.inoue@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests~=2.31",
    "pydantic~=2.9",
    "python-dotenv~=1.0",
]

[project.urls]
Homepage = "https://github.com/peeeechi/jira_api_client"
"Bug Tracker" = "https://github.com/peeeechi/jira_api_client/issues"

[build-system]
requires = ["setuptools>=61.0"] # ビルドシステムに必要なツール (setuptools が一般的)
build-backend = "setuptools.build_meta"

# [tool.setuptools.packages.find]
# where = ["src"]

# どのフォルダをモジュールとして扱うかを書きます。
[tool.setuptools]
py-modules = ["src"]

# optional: for tools like ruff, black, mypy etc.
# [tool.black]
# line-length = 88
# target-version = ['py39']